<resources>
    <string name="app_name">WorldLib</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="version">v.0.0.1</string>
    <!-- Меню названия -->
    <string name="menu_news">News</string>
    <string name="menu_yourOrders">Your orders</string>
    <string name="menu_otherOrders">Other orders</string>
    <string name="menu_create">Create book</string>
    <string name="menu_help">Help</string>
</resources>